tests/toylang/neg/000477_mutation.toylang
program a = { a = bool a + a; } .
